src/test/ui/error-codes/E0405.stderr
error[E0405]: cannot find trait `SomeTrait` in this scope
  --> $DIR/E0405.rs:13:6
   |
13 | impl SomeTrait for Foo {} //~ ERROR E0405
   |      ^^^^^^^^^ not found in this scope

error: cannot continue compilation due to previous error

